@@ -1,3 +1,7 @@
+2005-02-21  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* w3m-form.el (w3m-form-input-textarea): Fix.
+
 2005-02-21  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>,
 	Hideyuki SHIRAI  <shirai@meadowy.org>
 
